// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component ContributorRowHeader header for contributor editor control with all options 1`] = `
<React.Fragment>
  <WithStyles(ConfirmDialogBox)
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete all records?",
        "confirmationTitle": "Delete all",
      }
    }
    onAction={[MockFunction]}
    onRef={[Function]}
  />
  <React.Fragment>
    <br />
    Step 2 - Select your name from the list below
  </React.Fragment>
  <WithStyles(ListItem)
    classes={
      Object {
        "root": "header",
      }
    }
  >
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(ListItemIcon)>
        <pure(PeopleIcon) />
      </WithStyles(ListItemIcon)>
    </Hidden>
    <WithStyles(ListItemText)
      secondary="Name as published"
      secondaryTypographyProps={
        Object {
          "variant": "caption",
        }
      }
    />
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(ListItemText)
        secondary="UQ identifier"
        secondaryTypographyProps={
          Object {
            "variant": "caption",
          }
        }
      />
    </Hidden>
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(ListItemText)
        classes={
          Object {
            "secondary": "right paddingRight24",
          }
        }
        secondary="Reorder records"
        secondaryTypographyProps={
          Object {
            "variant": "caption",
          }
        }
      />
    </Hidden>
    <WithStyles(ListItemSecondaryAction)
      classes={
        Object {
          "root": "",
        }
      }
    >
      <WithStyles(Tooltip)
        title="Remove all records"
      >
        <WithStyles(IconButton)
          disabled={false}
          onClick={[Function]}
        >
          <pure(DeleteForeverIcon) />
        </WithStyles(IconButton)>
      </WithStyles(Tooltip)>
    </WithStyles(ListItemSecondaryAction)>
  </WithStyles(ListItem)>
</React.Fragment>
`;

exports[`Component ContributorRowHeader header for contributor editor control with delete all disabled 1`] = `
<React.Fragment>
  <WithStyles(ConfirmDialogBox)
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete all records?",
        "confirmationTitle": "Delete all",
      }
    }
    onAction={[MockFunction]}
    onRef={[Function]}
  />
  <WithStyles(ListItem)
    classes={
      Object {
        "root": "header",
      }
    }
  >
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(ListItemIcon)>
        <pure(PeopleIcon) />
      </WithStyles(ListItemIcon)>
    </Hidden>
    <WithStyles(ListItemText)
      secondary="Name as published"
      secondaryTypographyProps={
        Object {
          "variant": "caption",
        }
      }
    />
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(ListItemText)
        classes={
          Object {
            "secondary": "right paddingRight24",
          }
        }
        secondary="Reorder records"
        secondaryTypographyProps={
          Object {
            "variant": "caption",
          }
        }
      />
    </Hidden>
    <WithStyles(ListItemSecondaryAction)
      classes={
        Object {
          "root": "",
        }
      }
    >
      <WithStyles(Tooltip)
        title="Remove all records"
      >
        <WithStyles(IconButton)
          disabled={true}
          onClick={[Function]}
        >
          <pure(DeleteForeverIcon) />
        </WithStyles(IconButton)>
      </WithStyles(Tooltip)>
    </WithStyles(ListItemSecondaryAction)>
  </WithStyles(ListItem)>
</React.Fragment>
`;

exports[`Component ContributorRowHeader header for contributor editor control with name and delete all button only 1`] = `
<React.Fragment>
  <WithStyles(ConfirmDialogBox)
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete all records?",
        "confirmationTitle": "Delete all",
      }
    }
    onAction={[MockFunction]}
    onRef={[Function]}
  />
  <WithStyles(ListItem)
    classes={
      Object {
        "root": "header",
      }
    }
  >
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(ListItemIcon)>
        <pure(PeopleIcon) />
      </WithStyles(ListItemIcon)>
    </Hidden>
    <WithStyles(ListItemText)
      secondary="Name as published"
      secondaryTypographyProps={
        Object {
          "variant": "caption",
        }
      }
    />
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(ListItemText)
        classes={
          Object {
            "secondary": "right paddingRight24",
          }
        }
        secondary="Reorder records"
        secondaryTypographyProps={
          Object {
            "variant": "caption",
          }
        }
      />
    </Hidden>
    <WithStyles(ListItemSecondaryAction)
      classes={
        Object {
          "root": "",
        }
      }
    >
      <WithStyles(Tooltip)
        title="Remove all records"
      >
        <WithStyles(IconButton)
          disabled={false}
          onClick={[Function]}
        >
          <pure(DeleteForeverIcon) />
        </WithStyles(IconButton)>
      </WithStyles(Tooltip)>
    </WithStyles(ListItemSecondaryAction)>
  </WithStyles(ListItem)>
</React.Fragment>
`;

exports[`Component ContributorRowHeader header for creator role 1`] = `
<React.Fragment>
  <WithStyles(ConfirmDialogBox)
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete all records?",
        "confirmationTitle": "Delete all",
      }
    }
    onAction={[MockFunction]}
    onRef={[Function]}
  />
  <WithStyles(ListItem)
    classes={
      Object {
        "root": "header",
      }
    }
  >
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(ListItemIcon)>
        <pure(PeopleIcon) />
      </WithStyles(ListItemIcon)>
    </Hidden>
    <WithStyles(ListItemText)
      secondary="Name as published"
      secondaryTypographyProps={
        Object {
          "variant": "caption",
        }
      }
    />
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(ListItemText)
        secondary="Role"
        secondaryTypographyProps={
          Object {
            "variant": "caption",
          }
        }
      />
    </Hidden>
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(ListItemText)
        classes={
          Object {
            "secondary": "right paddingRight24",
          }
        }
        secondary="Reorder records"
        secondaryTypographyProps={
          Object {
            "variant": "caption",
          }
        }
      />
    </Hidden>
    <WithStyles(ListItemSecondaryAction)
      classes={
        Object {
          "root": "",
        }
      }
    >
      <WithStyles(Tooltip)
        title="Remove all records"
      >
        <WithStyles(IconButton)
          disabled={false}
          onClick={[Function]}
        >
          <pure(DeleteForeverIcon) />
        </WithStyles(IconButton)>
      </WithStyles(Tooltip)>
    </WithStyles(ListItemSecondaryAction)>
  </WithStyles(ListItem)>
</React.Fragment>
`;
